ApiResponse and Validation Errors implementations

--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -7,6 +7,8 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "TeamConnection": "Server=(localdb)\\mssqllocaldb;Initial Catalog=QuizDb;Integrated Security=true;MultipleActiveResultSets=True;"
+        //"TeamConnection": "Server=(localdb)\\mssqllocaldb;Initial Catalog=QuizDb;Integrated Security=true;MultipleActiveResultSets=True;"
+        "TeamConnection": "Data Source=SQL5108.site4now.net;Initial Catalog=db_a953d6_quizdb;User Id=db_a953d6_quizdb_admin;Password=tsdDB2k19-19;"
+
     }
 }
