--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -26,6 +26,7 @@
 	  <Folder Include="Contracts\Infrastructure\" />
 	  <Folder Include="Contracts\Services\" />
 	  <Folder Include="Helpers\" />
+	  <Folder Include="Responses\" />
 	</ItemGroup>
 
 </Project>
